k8s/applications/web/pinepods/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pinepods
  labels:
    name: pinepods
