k8s/applications/web/pinepods/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pinepods
  namespace: pinepods
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: external
      namespace: gateway
  hostnames:
    - pinepods.peekoff.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pinepods
          port: 8040
